# Game-Lex

./: .gitignore  CMakeLists.txt  README.md  fib.glx
.github/ISSUE_TEMPLATE/: feature_request.md  ♻️refactoring.md  ✨feature-request.md  📝documentation.md
examples/: 3_comments.gla  CMakeLists.txt  fib.gla
src/: assembler.c  assembler.h  emulator.c  emulator.h  glc.c  gle.c  glex.c  glex.h  glx.c  shift.c  shift.h  shift_arg.c  shift_arg.h  text.c  text.h
tests/: 1_123.gla  3_fibs.gla  CMakeLists.txt
